--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,17 @@
-# fly.toml app configuration file generated for rust-chinesewriter on 2025-06-27T21:21:08+02:00
+# fly.toml app configuration file generated for rust-chinesewriter on 2025-07-02T11:07:02+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'rust-chinesewriter'
-primary_region = 'cdg'
+primary_region = 'ams'
 
 [build]
 
 [http_service]
   internal_port = 3001
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
